fix: resolve integration test infrastructure issues